# cpprestsdk-file-server

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  base_controller.cpp  base_controller.hpp  build.sh  main.cpp  rest_server.cpp  rest_server.hpp
examples/: CMakeLists.txt
examples/file_server/: CMakeLists.txt  file_server.cpp
include/: base_controller.hpp  jwt_validator.hpp
libcontroller/src/: base_controller.cpp  jwt_validator.cpp  rest_server.cpp
